--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "gulp",
+    "start": "gulp --production",
     "production": "gulp --production"
   },
   "keywords": [],
@@ -32,6 +33,7 @@
     "run-sequence": "2.2.0"
   },
   "dependencies": {
-    "adminlte": "^2.4.1"
+    "adminlte": "^2.4.1",
+    "express": "^4.16.2"
   }
 }
